# saphive

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  development-plan.md  milestones.md  packaging-plan.md
examples/: README.md
examples/scripts/: create_sessions_dry_run.py  saphive.toml
src/saphive/: __init__.py  __main__.py
src/saphive/cli/: __init__.py  app.py
src/saphive/core/: __init__.py  com.py  config.py  context.py  errors.py  metadata.py  results.py  runtime.py
src/saphive/sap/: __init__.py  auth.py  interfaces.py  resolver.py  windows.py
src/saphive/scripts/: __init__.py  contract.py  discovery.py  loader.py  registry.py
src/saphive/utils/: __init__.py
tests/: __init__.py
tests/support/: __init__.py  sap.py
tests/unit/: test_import.py
tests/unit/cli/: test_app.py
tests/unit/core/: test_config.py  test_context.py  test_errors.py  test_metadata.py  test_results.py  test_runtime.py
tests/unit/sap/: test_auth.py  test_interfaces.py  test_resolver.py  test_windows.py
tests/unit/scripts/: test_contract.py  test_discovery.py  test_loader.py
