[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "saphive"
version = "0.1.0"
description = "Lightweight Python runtime and SDK for SAP GUI Scripting automation."
readme = "docs/architecture.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "SAPHive Contributors" }
]
keywords = [
  "sap",
  "sap-gui-scripting",
  "automation",
  "rpa",
  "runtime"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]
dependencies = [
  "platformdirs>=4.2,<5",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "rich>=13.7,<14",
  "structlog>=24.1,<26",
  "typer>=0.12,<1",
  "pywin32>=306; platform_system == 'Windows'"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1"
]
excel = [
  "openpyxl>=3.1,<4"
]
prefect = [
  "prefect>=3,<4"
]
api = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1"
]

[project.scripts]
saphive = "saphive.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/saphive"]

[tool.hatch.build.targets.sdist]
include = [
  "docs",
  "src",
  "tests",
  "pyproject.toml",
  "AGENTS.md"
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "PT",
  "PTH",
  "RUF",
  "SIM",
  "UP",
  "W"
]
ignore = [
  "PLR0913"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
pretty = true
files = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "--strict-config",
  "--strict-markers"
]
markers = [
  "windows: tests that require Windows-specific behavior",
  "sap_gui: tests that require SAP GUI Scripting and must not run in generic WSL test runs"
]

[tool.coverage.run]
branch = true
source = ["saphive"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
